Added dialog for scanning a preview image and selecting scan area.
Currently scan area selection is not yet ysed, the dialog just scans
the preview image.