@@ -377,11 +377,17 @@ Program grant you additional permission to convey the resulting work.
         <sourcepath refid="debug.sourcepath"/> 
     </nbjpdastart>
     <java classname="${classname}" fork="true">
+        <jvmarg value="-Xmx${heap.max_size}M"/>
+        <jvmarg value="-Djava.library.path=${jlibnxt.path}"/>
+        <!--<jvmarg value="-XX:+PrintGCDetails"/>-->
+        <!--jvmarg value="${run.jvmargs}"/-->
         <jvmarg value="-Xdebug"/>
         <jvmarg value="-Xnoagent"/>
         <jvmarg value="-Djava.compiler=none"/>
         <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
-        <classpath refid="project.class.path"/>
+        <classpath>
+            <path refid="project.class.path"/>
+        </classpath>
     </java>
 </target>
 
